# pandacount

./: .gitattributes  .gitignore  .mise.toml  .python-version  CLAUDE.md  finanzberatung-report.html  migrate.py  panda.py  panda_analysis.py  panda_extract.py  panda_ing_import.py  panda_scratch.ipynb  pandacount.duckdb  pyproject.toml
reports/: finanzberatung-report.html
