[tool.poetry]
name = "pandacount"
version = "1.0.0"
description = ""
authors = ["Andreas Profous"]

[tool.poetry.dependencies]
dash= "==2.14.1"
numpy = "==1.26.1"
plotly = "==5.18.0"
pandas = "==2.1.2"
python = ">=3.12,<3.13"
pyyaml = "==6.0.1"
typer = "==0.9.0"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
flake8 = "==4.0.1"
ipython = "==8.2.0"
isort = "==5.10.1"
mypy = "==0.942"
toolz = "==0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
