[tool.poetry]
name = "pandacount"
version = "1.0.0"
description = ""
authors = ["Andreas Profous"]

[tool.poetry.dependencies]
dash= "==2.14.2"
numpy = "==1.26.2"
types-PyYAML = "==6.0.12.12"
plotly = "==5.18.0"
pandas = "==2.1.3"
python = ">=3.10,<3.13"
pyyaml = "==6.0.1"
typer = "==0.9.0"

[tool.poetry.dev-dependencies]
black = "==23.11.0"
flake8 = "==6.1.0"
ipython = "==8.18.1"
isort = "==5.12.0"
mypy = "==1.7.1"
toolz = "==0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.10"
exclude = ["venv"]
