[tool.poetry]
name = "pandacount"
version = "1.0.0"
description = ""
authors = ["Andreas Profous"]
package-mode = false

[tool.poetry.dependencies]
dash = "2.18.2"
matplotlib = "3.10.0"
numpy = "2.1.3"
types-PyYAML = "6.0.12.20240917"
plotly = "5.24.1"
pandas = "2.2.3"
python = "3.13.7"
pyyaml = "6.0.1"
typer = "0.15.1"
marimo = "^0.16.5"

[tool.poetry.dev-dependencies]
black = "24.10.0"
flake8 = "7.1.1"
ipython = "8.30.0"
isort = "5.13.2"
mypy = "1.13.0"
toolz = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
exclude = ["venv"]
